Feature/dpo 3121 compositions versions fix (#86)
* DPO-3121 Ratapuolen /compositions-rajapintaan osittaisten versioiden suodatus