@@ -3,12 +3,10 @@ package fi.livi.rata.avoindata.server.controller.api;
 import static fi.livi.rata.avoindata.server.controller.utils.CacheControl.addSchedulesCacheParametersForDailyResult;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -18,7 +16,9 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.google.common.collect.Lists;
+
 import fi.livi.rata.avoindata.common.dao.composition.CompositionRepository;
+import fi.livi.rata.avoindata.common.dao.composition.FindCompositionsByVersionService;
 import fi.livi.rata.avoindata.common.dao.train.FindByTrainIdService;
 import fi.livi.rata.avoindata.common.domain.common.TrainId;
 import fi.livi.rata.avoindata.common.domain.composition.Composition;
@@ -35,31 +35,27 @@ import jakarta.servlet.http.HttpServletResponse;
 @RestController
 @RequestMapping(WebConfig.CONTEXT_PATH + "compositions")
 public class CompositionController extends ADataController {
+    public static final int MAX_ANNOUNCED_COPOSITIONS = 1000;
     @Autowired
     private CompositionRepository compositionRepository;
 
     @Autowired
     private FindByTrainIdService findByTrainIdService;
 
+    @Autowired
+    private FindCompositionsByVersionService compositionService;
+
     @Operation(summary = "Returns all compositions that are newer than {version}")
     @RequestMapping(method = RequestMethod.GET, path = "")
     @Transactional(timeout = 30, readOnly = true)
-    public List<Composition> getCompositionsByVersion(@Parameter(description = "version") @RequestParam(required = false) Long version, HttpServletResponse response) {
-        if (version == null) {
-            version = compositionRepository.getMaxVersion() - 1;
-        }
+    public List<Composition> getCompositionsByVersion(@Parameter(description = "version") @RequestParam(required = false)
+                                                      final Long version, final HttpServletResponse response) {
 
-        List<TrainId> trainIds = compositionRepository.findIdsByVersionGreaterThan(version, PageRequest.of(0, 1000));
-        if (!trainIds.isEmpty()) {
-
-            List<Composition> compositions = findByTrainIdService.findCompositions(trainIds);
-
+        final List<Composition> compositions = compositionService.findByVersionGreaterThan(version, MAX_ANNOUNCED_COPOSITIONS);
+        if (!compositions.isEmpty()) {
             CacheConfig.COMPOSITION_CACHECONTROL.setCacheParameter(response, compositions, version);
-
-            return compositions;
-        } else {
-            return new ArrayList<>();
         }
+        return compositions;
     }
 
     @Operation(summary = "Returns all compositions for trains run on {departure_date}")
@@ -67,10 +63,10 @@ public class CompositionController extends ADataController {
     @Transactional(timeout = 30, readOnly = true)
     public Collection<Composition> getCompositionsByDepartureDate(
             @PathVariable @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) final LocalDate departure_date,
-            HttpServletResponse response) {
+            final HttpServletResponse response) {
 
 
-        List<Composition> list = compositionRepository.findByDepartureDateBetweenOrderByTrainNumber(departure_date);
+        final List<Composition> list = compositionRepository.findByDepartureDateBetweenOrderByTrainNumber(departure_date);
 
         if (list.isEmpty()) {
             CacheControl.setCacheMaxAgeSeconds(response, 900);
@@ -86,9 +82,11 @@ public class CompositionController extends ADataController {
     @RequestMapping(value = "/{departure_date}/{train_number}", method = RequestMethod.GET)
     @Transactional(timeout = 30, readOnly = true)
     public Composition getCompositionByTrainNumberAndDepartureDate(
-            @PathVariable @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate departure_date,
-            @PathVariable("train_number") Long train_number, HttpServletResponse response) {
-        List<Composition> compositions = findByTrainIdService.findCompositions(Lists.newArrayList(new TrainId(train_number, departure_date)));
+            @PathVariable @DateTimeFormat(iso = DateTimeFormat.ISO.DATE)
+            final LocalDate departure_date,
+            @PathVariable("train_number")
+            final Long train_number, final HttpServletResponse response) {
+        final List<Composition> compositions = findByTrainIdService.findCompositions(Lists.newArrayList(new TrainId(train_number, departure_date)));
 
         if (compositions == null || compositions.isEmpty()) {
             throw new CompositionNotFoundException(train_number, departure_date);
@@ -96,6 +94,6 @@ public class CompositionController extends ADataController {
 
         CacheConfig.COMPOSITION_CACHECONTROL.setCacheParameter(response, compositions);
 
-        return compositions.get(0);
+        return compositions.getFirst();
     }
 }
